[gd_scene load_steps=14 format=2]

[ext_resource path="res://Styles/Labels/Big.tres" type="DynamicFont" id=1]
[ext_resource path="res://Styles/Labels/Button.tres" type="DynamicFont" id=2]
[ext_resource path="res://Styles/Labels/Desc.tres" type="DynamicFont" id=3]
[ext_resource path="res://Styles/Buttons/pressed.tres" type="StyleBox" id=4]
[ext_resource path="res://Styles/Buttons/focus.tres" type="StyleBox" id=5]
[ext_resource path="res://Styles/Panels/upgrade_back.tres" type="StyleBox" id=6]
[ext_resource path="res://Styles/Buttons/norm.tres" type="StyleBox" id=7]
[ext_resource path="res://Styles/Buttons/hover.tres" type="StyleBox" id=8]
[ext_resource path="res://Scripts/upgrade/upgrade_back.gd" type="Script" id=9]
[ext_resource path="res://Sprites/tab/s1mup.png" type="Texture" id=10]
[ext_resource path="res://Sprites/tab/s2mup.png" type="Texture" id=11]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.07, 0.07, 0.07, 0.95 )
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color( 1, 1, 1, 0.0588235 )
shadow_size = 5
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0705882, 0.0705882, 0.0705882, 0 )
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
shadow_color = Color( 0.878431, 0.121569, 0.34902, 0.2 )
shadow_size = 5
anti_aliasing = false

[node name="upgrade_back" type="Panel"]
show_behind_parent = true
anchor_left = 1.0
anchor_right = 1.0
margin_right = 274.0
margin_bottom = 52.0
custom_styles/panel = ExtResource( 6 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="."]
margin_left = 102.0
margin_top = 11.0
margin_right = 262.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.882353, 0.121569, 0.352941, 1 )
text = "Radiative upgrades"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="desc" type="Label" parent="."]
margin_left = 102.0
margin_top = 29.0
margin_right = 262.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.764706, 0.733333, 0.603922, 1 )
text = "Press escape to get out of here!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Button" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 60.0
margin_bottom = 42.0
mouse_default_cursor_shape = 2
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 7 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="text" type="Label" parent="back"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.764706, 0.733333, 0.603922, 1 )
text = "Back"
align = 1
valign = 1

[node name="icon" type="Sprite" parent="."]
position = Vector2( 81, 26 )
texture = ExtResource( 11 )

[node name="reset" type="Panel" parent="."]
visible = false
margin_left = 289.0
margin_right = 395.0
margin_bottom = 52.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button" type="Button" parent="reset"]
margin_left = 10.0
margin_top = 10.0
margin_right = 60.0
margin_bottom = 42.0
mouse_default_cursor_shape = 2
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 7 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="text" type="Label" parent="reset/button"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.764706, 0.733333, 0.603922, 1 )
text = "Reset"
align = 1
valign = 1

[node name="icon" type="Sprite" parent="reset"]
position = Vector2( 81, 26 )
texture = ExtResource( 10 )

[node name="flash0" type="Panel" parent="reset"]
visible = false
margin_right = 106.0
margin_bottom = 52.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="flash1" type="Panel" parent="reset"]
visible = false
margin_right = 106.0
margin_bottom = 52.0
custom_styles/panel = SubResource( 2 )

[node name="up_count" type="Panel" parent="."]
margin_left = 684.0
margin_right = 790.0
margin_bottom = 52.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="amount" type="Label" parent="up_count"]
margin_top = 11.0
margin_right = 106.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.882353, 0.121569, 0.352941, 1 )
text = "28 / ??"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="flair" type="Label" parent="up_count"]
margin_top = 30.0
margin_right = 106.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.764706, 0.733333, 0.603922, 1 )
text = "upgrades owned"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="back" to="." method="_on_back_button_down"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="button_down" from="reset/button" to="." method="_on_back_button_down"]
[connection signal="mouse_entered" from="reset/button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="reset/button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="reset/button" to="." method="_on_button_pressed"]
